# ChangeLog for net-mail/pfqueue
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-mail/pfqueue/ChangeLog,v 1.7 2005/02/25 01:45:53 ticho Exp $

*pfqueue-0.3.3 (25 Feb 2005)

  25 Feb 2005; Andrej Kacian <ticho@gentoo.org> metadata.xml,
  -pfqueue-0.2.0.ebuild, -pfqueue-0.2.1.ebuild, pfqueue-0.3.0.ebuild,
  pfqueue-0.3.1.ebuild, +pfqueue-0.3.3.ebuild:
  Version bump. Made 0.3.0 and 0.3.1 stable on x86.

*pfqueue-0.3.2 (19 Feb 2005)

  19 Feb 2005; Andrej Kacian <ticho@gentoo.org> +pfqueue-0.3.2.ebuild:
  Version bump.

*pfqueue-0.3.1 (13 Feb 2005)

  13 Feb 2005; Andrej Kacian <ticho@gentoo.org> +pfqueue-0.3.1.ebuild:
  Version bump. Bug #81643, reported by Daniel Webert <rockoo@gmail.com>.

*pfqueue-0.3.0 (01 Feb 2005)

  01 Feb 2005; Andrej Kacian <ticho@gentoo.org> +pfqueue-0.3.0.ebuild:
  Version bump. Closes #80258, reported by eGore <egore@gmx.de>.

  22 Jan 2005; Andrej Kacian <ticho@gentoo.org> pfqueue-0.2.0.ebuild:
  Install into /usr/sbin too.

*pfqueue-0.2.1 (15 Jan 2005)

  15 Jan 2005; Andrej Kacian <ticho@gentoo.org> +pfqueue-0.2.1.ebuild:
  Version bump. Install binary into /usr/sbin.

*pfqueue-0.2.0 (05 Jan 2005)

  05 Jan 2005; Andrej Kacian <ticho@gentoo.org> +metadata.xml,
  +pfqueue-0.2.0.ebuild:
  Initial import, ebuild submitted by eGore <egore@gmx.de>. Closes #75173.
