@@ -1,6 +1,10 @@
 # ChangeLog for net-mail/pfqueue
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-mail/pfqueue/ChangeLog,v 1.7 2005/02/25 01:45:53 ticho Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-mail/pfqueue/ChangeLog,v 1.8 2005/02/25 02:09:24 ticho Exp $
+
+  25 Feb 2005; Andrej Kacian <ticho@gentoo.org> pfqueue-0.3.0.ebuild,
+  pfqueue-0.3.1.ebuild, pfqueue-0.3.2.ebuild, pfqueue-0.3.3.ebuild:
+  Install manpage. Use make install in src_install().
 
 *pfqueue-0.3.3 (25 Feb 2005)
 
